# shangchi

./: LICENSE  readme.md
Hardware/: shangchi.eprj
shangchi_esp32/: CMakeLists.txt  axp2101.md  sdkconfig  sdkconfig.old
shangchi_esp32/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
shangchi_esp32/main/aht10/: aht10.cpp  aht10.h
shangchi_esp32/main/axp2101/: axp2101.h  port_axp2101.cpp  port_i2c_axp2101.cpp
shangchi_esp32/main/flash_info/: flash_info.cpp  flash_info.h
shangchi_esp32/main/irq/: irq.cpp  irq.h
shangchi_esp32/main/oled/: oled.cpp  oled.h
shangchi_esp32/main/shangchi_debug/: shangchi_debug.cpp  shangchi_debug.h
shangchi_esp32/main/soft_iic/: soft_iic.cpp  soft_iic.h
shangchi_esp32/main/wifi/: wifi.cpp  wifi.h
